operations/common/saturation: Always set input & output formats

Some operations never set their output parameters during "prepare".
For example, various source operations because the output is only
known during "process". Support consuming data from such operations by
defaulting to "CIE Lab alpha".

https://bugzilla.gnome.org/show_bug.cgi?id=789642